--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "lorem-ipsum": "^2.0.3",
+    "method-override": "^3.0.0",
     "mysql2": "^2.2.5",
     "uuid": "^8.3.2"
   }
