--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "lorem-ipsum": "^2.0.3",
     "method-override": "^3.0.0",
