--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.4.0",
     "lorem-ipsum": "^2.0.3",
     "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "uuid": "^8.3.2"
   }
